--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,6 +15,7 @@ import { SITE_TITLE } from '../consts';
 		<div class="internal-links">
 			<HeaderLink href="/">Welcome</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink href="/portfolio">Portfolio</HeaderLink>
 			<HeaderLink href="/contact">Contact</HeaderLink>
 		</div>
 	</nav>
